--- a/jupyter_notebooks/lecture0/assignments/numpy.ipynb
+++ b/jupyter_notebooks/lecture0/assignments/numpy.ipynb
@@ -20,10 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,10 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.15.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.__version__)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,10 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,10 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,10 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +146,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26,\n",
+       "       27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43,\n",
+       "       44, 45, 46, 47, 48, 49])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10+np.arange(40)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,10 +176,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9, 8, 7, 6, 5, 4, 3, 2, 1, 0])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.arange(10)\n",
+    "# arr = arr[::-1] \n",
+    "np.flipud(arr)\n",
+    "# arr"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,10 +207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5],\n",
+       "       [6, 7, 8]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(9).reshape((3,3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,10 +237,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1.],\n",
+       "       [1., 1., 1.],\n",
+       "       [1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones(9).reshape((3,3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,10 +267,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7, 3, 1],\n",
+       "       [5, 6, 6],\n",
+       "       [5, 1, 8]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(9, size=(3,3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,10 +297,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 5, 20, 22],\n",
+       "        [15,  7, 24],\n",
+       "        [ 8,  7,  3]],\n",
+       "\n",
+       "       [[13, 16, 18],\n",
+       "        [20, 22, 22],\n",
+       "        [15,  6,  8]],\n",
+       "\n",
+       "       [[14,  1, 24],\n",
+       "        [21,  5,  7],\n",
+       "        [12, 11,  4]]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(27, size=(3,3,3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,10 +335,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Max : ', 99)\n",
+      "('Min : ', 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.random.randint(101,size=(10,10))\n",
+    "print('Max : ', arr.max())\n",
+    "print(\"Min : \", arr.min())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,10 +363,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.2"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(100,size=(30)).mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,10 +391,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.zeros(25).reshape((5,5))\n",
+    "arr[0] = 1\n",
+    "arr[4] = 1\n",
+    "arr[:,0]=1\n",
+    "arr[:,4]=1\n",
+    "arr"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -448,19 +646,19 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "hello"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
