--- a/jupyter_notebooks/lecture0/assignments/numpy.ipynb
+++ b/jupyter_notebooks/lecture0/assignments/numpy.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,10 +430,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,2) (3,1) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-51-75e9c8700483>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0marr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0marr\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,2) (3,1) "
+     ]
+    }
+   ],
+   "source": [
+    "arr = [[1,0],[0,1]]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -447,10 +461,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = [[1,0],[0,1]]\n",
+    "np.tile(arr,(4,4))\n",
+    "# help(np.tile)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -463,10 +499,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[3864, 4600],\n",
+       "         [2484, 5704],\n",
+       "         [7544, 3496]],\n",
+       "\n",
+       "        [[ 252,  300],\n",
+       "         [ 162,  372],\n",
+       "         [ 492,  228]],\n",
+       "\n",
+       "        [[1092, 1300],\n",
+       "         [ 702, 1612],\n",
+       "         [2132,  988]]],\n",
+       "\n",
+       "\n",
+       "       [[[3066, 3650],\n",
+       "         [1971, 4526],\n",
+       "         [5986, 2774]],\n",
+       "\n",
+       "        [[3024, 3600],\n",
+       "         [1944, 4464],\n",
+       "         [5904, 2736]],\n",
+       "\n",
+       "        [[4158, 4950],\n",
+       "         [2673, 6138],\n",
+       "         [8118, 3762]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 126,  150],\n",
+       "         [  81,  186],\n",
+       "         [ 246,  114]],\n",
+       "\n",
+       "        [[1134, 1350],\n",
+       "         [ 729, 1674],\n",
+       "         [2214, 1026]],\n",
+       "\n",
+       "        [[3024, 3600],\n",
+       "         [1944, 4464],\n",
+       "         [5904, 2736]]],\n",
+       "\n",
+       "\n",
+       "       [[[1932, 2300],\n",
+       "         [1242, 2852],\n",
+       "         [3772, 1748]],\n",
+       "\n",
+       "        [[ 420,  500],\n",
+       "         [ 270,  620],\n",
+       "         [ 820,  380]],\n",
+       "\n",
+       "        [[ 168,  200],\n",
+       "         [ 108,  248],\n",
+       "         [ 328,  152]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 714,  850],\n",
+       "         [ 459, 1054],\n",
+       "         [1394,  646]],\n",
+       "\n",
+       "        [[ 126,  150],\n",
+       "         [  81,  186],\n",
+       "         [ 246,  114]],\n",
+       "\n",
+       "        [[1344, 1600],\n",
+       "         [ 864, 1984],\n",
+       "         [2624, 1216]]]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_array(size_of_array, max_int=100):\n",
+    "    return np.random.randint(max_int, size=size_of_array)\n",
+    "\n",
+    "a = get_array((5,3))\n",
+    "b = get_array((3,2))\n",
+    "# print(a)\n",
+    "# print(b)\n",
+    "np.multiply.outer(a,b)\n"
+   ]
   },
   {
    "cell_type": "markdown",
