--- a/jupyter_notebooks/Lecture_01_EDA/topic-1-exploratory-data-analysis-with-pandas-ASSIGNMENT.ipynb
+++ b/jupyter_notebooks/Lecture_01_EDA/topic-1-exploratory-data-analysis-with-pandas-ASSIGNMENT.ipynb
@@ -58,7 +58,7 @@
     "# to draw pictures in jupyter notebook\n",
     "%matplotlib inline \n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "# import seaborn as sns\n",
     "# we don't like warnings\n",
     "# you can comment the following 2 lines if you'd like to\n",
     "import warnings\n",
@@ -245,13 +245,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Male      21790\n",
+       "Female    10771\n",
+       "Name: sex, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# You code here"
+    "data['sex'].value_counts()"
    ]
   },
   {
@@ -263,13 +274,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.85823043357163"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# You code here"
+    "data['age'][data['sex']=='Female'].mean()"
    ]
   },
   {
@@ -281,13 +301,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Germany    0.420749\n",
+       "Name: native-country, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# You code here"
+    "data[data['native-country']=='Germany']['native-country'].value_counts()/len(data['native-country'])*100"
    ]
   },
   {
@@ -299,13 +329,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>salary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;=50K</th>\n",
+       "      <td>36.783738</td>\n",
+       "      <td>14.020088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>&gt;50K</th>\n",
+       "      <td>44.249841</td>\n",
+       "      <td>10.519028</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             mean        std\n",
+       "salary                      \n",
+       "<=50K   36.783738  14.020088\n",
+       ">50K    44.249841  10.519028"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# You code here"
+    "data.groupby('salary')['age'].agg([np.mean, np.std])"
    ]
   },
   {
@@ -317,13 +402,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No, as we have people with more than 50K salary in 1st-12th\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>education</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "      <th>1st-4th</th>\n",
+       "      <th>5th-6th</th>\n",
+       "      <th>7th-8th</th>\n",
+       "      <th>9th</th>\n",
+       "      <th>Assoc-acdm</th>\n",
+       "      <th>Assoc-voc</th>\n",
+       "      <th>Bachelors</th>\n",
+       "      <th>Doctorate</th>\n",
+       "      <th>HS-grad</th>\n",
+       "      <th>Masters</th>\n",
+       "      <th>Preschool</th>\n",
+       "      <th>Prof-school</th>\n",
+       "      <th>Some-college</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>salary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;=50K</th>\n",
+       "      <td>871</td>\n",
+       "      <td>1115</td>\n",
+       "      <td>400</td>\n",
+       "      <td>162</td>\n",
+       "      <td>317</td>\n",
+       "      <td>606</td>\n",
+       "      <td>487</td>\n",
+       "      <td>802</td>\n",
+       "      <td>1021</td>\n",
+       "      <td>3134</td>\n",
+       "      <td>107</td>\n",
+       "      <td>8826</td>\n",
+       "      <td>764</td>\n",
+       "      <td>51</td>\n",
+       "      <td>153</td>\n",
+       "      <td>5904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>&gt;50K</th>\n",
+       "      <td>62</td>\n",
+       "      <td>60</td>\n",
+       "      <td>33</td>\n",
+       "      <td>6</td>\n",
+       "      <td>16</td>\n",
+       "      <td>40</td>\n",
+       "      <td>27</td>\n",
+       "      <td>265</td>\n",
+       "      <td>361</td>\n",
+       "      <td>2221</td>\n",
+       "      <td>306</td>\n",
+       "      <td>1675</td>\n",
+       "      <td>959</td>\n",
+       "      <td>0</td>\n",
+       "      <td>423</td>\n",
+       "      <td>1387</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "education  10th  11th  12th  1st-4th  5th-6th  7th-8th  9th  Assoc-acdm  \\\n",
+       "salary                                                                    \n",
+       "<=50K       871  1115   400      162      317      606  487         802   \n",
+       ">50K         62    60    33        6       16       40   27         265   \n",
+       "\n",
+       "education  Assoc-voc  Bachelors  Doctorate  HS-grad  Masters  Preschool  \\\n",
+       "salary                                                                    \n",
+       "<=50K           1021       3134        107     8826      764         51   \n",
+       ">50K             361       2221        306     1675      959          0   \n",
+       "\n",
+       "education  Prof-school  Some-college  \n",
+       "salary                                \n",
+       "<=50K              153          5904  \n",
+       ">50K               423          1387  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# You code here"
+    "print(\"No, as we have people with more than 50K salary in 1st-12th\")\n",
+    "pd.crosstab(data['salary'], data['education'])\n"
    ]
   },
   {
@@ -335,13 +549,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      count       mean        std   min   25%   50%   75%  \\\n",
+      "race                                                                        \n",
+      "Amer-Indian-Eskimo    311.0  37.173633  12.447130  17.0  28.0  35.0  45.5   \n",
+      "Asian-Pac-Islander   1039.0  37.746872  12.825133  17.0  28.0  36.0  45.0   \n",
+      "Black                3124.0  37.767926  12.759290  17.0  28.0  36.0  46.0   \n",
+      "Other                 271.0  33.457565  11.538865  17.0  25.0  31.0  41.0   \n",
+      "White               27816.0  38.769881  13.782306  17.0  28.0  37.0  48.0   \n",
+      "\n",
+      "                     max  \n",
+      "race                      \n",
+      "Amer-Indian-Eskimo  82.0  \n",
+      "Asian-Pac-Islander  90.0  \n",
+      "Black               90.0  \n",
+      "Other               77.0  \n",
+      "White               90.0  \n",
+      "          count       mean        std   min   25%   50%   75%   max\n",
+      "sex                                                                \n",
+      "Female  10771.0  36.858230  14.013697  17.0  25.0  35.0  46.0  90.0\n",
+      "Male    21790.0  39.433547  13.370630  17.0  29.0  38.0  48.0  90.0\n",
+      "\n",
+      "maximum age of men of Amer-Indian-Eskimo race :\n",
+      "82\n"
+     ]
+    }
+   ],
    "source": [
-    "# You code here"
+    "print(data.groupby('race')['age'].describe())\n",
+    "print(data.groupby('sex')['age'].describe())\n",
+    "print(\"\\nmaximum age of men of Amer-Indian-Eskimo race :\")\n",
+    "print(data.groupby('race')['age'].max()['Amer-Indian-Eskimo'])"
    ]
   },
   {
@@ -353,13 +597,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Singles\n",
+      "\n",
+      "\n",
+      "married  False  True \n",
+      "salary               \n",
+      "<=50K    14528  10192\n",
+      ">50K      7350    491\n"
+     ]
+    }
+   ],
    "source": [
-    "# You code here"
+    "data['married'] = data['marital-status'].str.contains('married')\n",
+    "print(\"Singles\\n\\n\")\n",
+    "print(pd.crosstab(data['salary'], data['married']))\n"
    ]
   },
   {
@@ -371,13 +629,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max number of hours a person works per week:85\n",
+      "percentage of those who earn a lot (>50K) among them :\n",
+      "0.07677896870489236\n"
+     ]
+    }
+   ],
    "source": [
-    "# You code here"
+    "idx_hours_more_than_99 = (data['hours-per-week'] >= data['hours-per-week'].max())\n",
+    "print(\"Max number of hours a person works per week:\" + str(idx_hours_more_than_99.sum())) #85\n",
+    "print(\"percentage of those who earn a lot (>50K) among them :\")\n",
+    "print(data[idx_hours_more_than_99]['salary'].value_counts()['>50K']*1.0/ len(idx_hours_more_than_99)*100)\n"
    ]
   },
   {
@@ -389,14 +658,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "native-country\n",
+      "?                             41.512864\n",
+      "Cambodia                      40.894737\n",
+      "Canada                        40.404959\n",
+      "China                         37.786667\n",
+      "Columbia                      39.067797\n",
+      "Cuba                          39.157895\n",
+      "Dominican-Republic            42.471429\n",
+      "Ecuador                       39.571429\n",
+      "El-Salvador                   36.792453\n",
+      "England                       41.833333\n",
+      "France                        45.068966\n",
+      "Germany                       41.014599\n",
+      "Greece                        44.241379\n",
+      "Guatemala                     39.234375\n",
+      "Haiti                         36.909091\n",
+      "Holand-Netherlands            40.000000\n",
+      "Honduras                      36.307692\n",
+      "Hong                          40.900000\n",
+      "Hungary                       35.615385\n",
+      "India                         41.530000\n",
+      "Iran                          43.976744\n",
+      "Ireland                       42.416667\n",
+      "Italy                         41.602740\n",
+      "Jamaica                       38.592593\n",
+      "Japan                         43.693548\n",
+      "Laos                          40.333333\n",
+      "Mexico                        40.340591\n",
+      "Nicaragua                     36.176471\n",
+      "Outlying-US(Guam-USVI-etc)    41.857143\n",
+      "Peru                          35.387097\n",
+      "Philippines                   39.595960\n",
+      "Poland                        38.333333\n",
+      "Portugal                      41.891892\n",
+      "Puerto-Rico                   38.570175\n",
+      "Scotland                      41.250000\n",
+      "South                         42.412500\n",
+      "Taiwan                        38.882353\n",
+      "Thailand                      45.444444\n",
+      "Trinadad&Tobago               37.368421\n",
+      "United-States                 40.447755\n",
+      "Vietnam                       37.343284\n",
+      "Yugoslavia                    44.562500\n",
+      "Name: hours-per-week, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# You code here"
+    "print(data.groupby('native-country')['hours-per-week'].mean())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43.693548387096776\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.groupby('native-country')['hours-per-week'].mean()['Japan'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -405,19 +747,19 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "hello"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   },
   "toc": {
    "base_numbering": 1,
